# BeliefCraft

./: .coveragerc  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  base-openapi.yaml  conftest.py  docker-compose.yml  evaluation_report.json  pyproject.toml  task.md
services/agent-service/: .env.example  AGENTS.md  Dockerfile  Dockerfile.sandbox  README.md  pyproject.toml  story-3.4-analysis.md
services/agent-service/app/: config.py  config_load.py  config_schema.py  main.py
services/agent-service/app/clients/: __init__.py  base_client.py  environment_client.py  rag_client.py  rag_mcp_client.py
services/agent-service/app/core/: __init__.py  constants.py  exceptions.py  logging.py
services/agent-service/app/evaluation/: README.md  __init__.py  __main__.py  cli.py  evaluator.py  models.py  test_scenarios.yaml
services/agent-service/app/models/: __init__.py  agent_state.py  env_sub_agent_plans.py  env_sub_agent_state.py  rag_sub_agent_state.py  requests.py  responses.py
services/agent-service/app/prompts/: __init__.py  env_sub_agent_system_prompts.py  rag_sub_agent_system_prompts.py  system_prompts.py
services/agent-service/app/services/: __init__.py  base_agent.py  env_sub_agent.py  health_checker.py  llm_service.py  message_parser.py  rag_sub_agent.py  react_agent.py  reasoning_trace_formatter.py  recommendation_generator.py
services/agent-service/app/tools/: __init__.py  base.py  cached_tool.py  code_tools.py  environment_tools.py  factory.py  mcp_loader.py  mcp_tool.py  orchestration_tools.py  planning_tools.py  rag_tools.py  registration.py  registry.py  skill_tools.py
services/agent-service/config/: default.yaml
services/agent-service/skills/: README.md
services/agent-service/skills/ds01_action_ranker/: SKILL.md
services/agent-service/skills/ds02_dominance_filter/: SKILL.md
services/agent-service/skills/ds03_threshold_trigger/: SKILL.md
services/agent-service/skills/ia01_sensor_belief_updater/: SKILL.md
services/agent-service/skills/ia02_supplier_reliability_aggregator/: SKILL.md
services/agent-service/skills/ia03_signal_reliability_estimator/: SKILL.md
services/agent-service/skills/inventory-discrepancy-audit/: SKILL.md
services/agent-service/skills/md01_confidence_estimator/: SKILL.md
services/agent-service/skills/md02_deferral_controller/: SKILL.md
services/agent-service/skills/md03_conflict_resolver/: SKILL.md
services/agent-service/skills/pu01_utility_scorer/: SKILL.md
services/agent-service/skills/pu02_value_of_information/: SKILL.md
services/agent-service/skills/pu03_constraint_validator/: SKILL.md
services/agent-service/skills/re01_uncertainty_quantifier/: SKILL.md
services/agent-service/skills/re02_leadtime_risk_estimator/: SKILL.md
services/agent-service/skills/re03_regime_detector/: SKILL.md
services/agent-service/tests/: conftest.py  test_agent_api.py  test_agent_state.py  test_cached_tool.py  test_citation_extractor.py  test_clients.py  test_code_extractor.py  test_config_loading.py  test_environment_tools.py  test_evaluator.py  test_final_answer_parser.py  test_formula_extractor.py  test_health.py  test_integration.py  test_llm_service.py  test_mcp_tools.py  test_rag_tools.py  test_react_agent.py  test_reasoning_trace_formatter.py  test_recommendation_generator.py  test_recommendation_response_schema.py  test_skill_store.py  test_skill_tools.py  test_system_prompts.py  test_tool_registration.py  test_tool_result_utils.py  test_tools.py  test_tools_api.py
services/agent-service/tests/clients/: test_clients.py  test_rag_mcp_client.py
services/agent-service/tests/evaluation/: test_evaluation_models.py  test_evaluator.py
services/agent-service/tests/integration/: test_env_sub_agent_integration.py  test_integration.py
services/agent-service/tests/models/: test_agent_state.py  test_env_sub_agent_plans.py  test_env_sub_agent_state.py  test_recommendation_response_schema.py
services/agent-service/tests/prompts/: test_system_prompts.py
services/agent-service/tests/services/: test_base_agent.py  test_env_sub_agent.py  test_llm_service.py  test_message_parser.py  test_react_agent.py  test_reasoning_trace_formatter.py  test_recommendation_generator.py
services/agent-service/tests/tools/: test_cached_tool.py  test_code_tools.py  test_orchestration_tools.py  test_rag_tools.py  test_skill_tools.py  test_tool_registration.py  test_tools.py
services/environment-api/: .env.example  AGENTS.md  Dockerfile  README.md  __init__.py  pyproject.toml
services/environment-api/config/: default.yaml  dev.yaml  prod.yaml
services/environment-api/src/: __init__.py  config.py  config_load.py  config_schema.py  config_simulation_schema.py  main.py
services/environment-api/src/api/: __init__.py  smart_query.py
services/environment-api/src/data_generator/: generate_seed_data.py  simulation_engine.py  simulation_processes.py  world_builder.py  world_building.py
services/environment-api/src/environment_api/: __init__.py  config_load.py  config_schema.py  main.py
services/environment-api/src/simulation_configs/: layout.py  sensors.py
services/environment-api/tests/: conftest.py  test_generate_seed_data.py  test_simulation_engine.py  test_world_builder.py
services/rag-service/: .env.example  AGENTS.md  Dockerfile  pyproject.toml
services/rag-service/config/: default.yaml  dev.yaml
services/rag-service/scripts/: generate_golden_set.py
services/rag-service/src/: julia_tree_builder.py
services/rag-service/src/code_translation/: build_prompt.py  (+9 more)
services/rag-service/tests/: conftest.py  conftest_rag.py  test_block_classifier.py  test_code_entity_processor.py  test_concept_enrichment_scripts.py  test_embed_chunks.py  test_embed_code_schema.py  test_mcp_connection.py  test_mcp_tools.py  test_metadata_extractor.py  test_repositories.py  test_search_boosting.py  test_store_code_schema.py  test_update_chunks_with_translated_code.py  test_weaviate_repository.py
services/sandbox-runner/: Dockerfile  pyproject.toml
services/sandbox-runner/app/: main.py
(+368 files in other folders)
