[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beliefcraft-agent-service"
version = "0.1.0"
description = "Agent service for BeliefCraft."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "redis>=5.0.0",
  "httpx>=0.27.0",
  "structlog>=24.1.0", # Оновлено відповідно до main
  "beliefcraft-common",
  "python-dotenv>=1.0.0",
  "anthropic>=0.18.0",
  "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-mock>=3.12.0",
]

[tool.uv.sources]
beliefcraft-common = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["agent_service"]
