[project]
name = "beliefcraft-agent-service"
version = "0.1.0"
description = "Agent service for BeliefCraft."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "redis>=5.0",
  "httpx>=0.27",
  "structlog>=24.0",
  "beliefcraft-common",
  "python-dotenv>=1.0",
  "anthropic>=0.18.0",
  "langgraph>=1.0.8",
  "langchain>=1.2.10",
  "boto3>=1.42.48",
  "langchain-aws>=1.2.5",
  "botocore>=1.42.48",
  "aiohttp>=3.13.3",
  "tenacity>=9.1.4",
]

[tool.uv.sources]
beliefcraft-common = { workspace = true }

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
