[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beliefcraft-agent-service"
version = "0.1.0"
description = "Agent service for BeliefCraft."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "redis>=5.0",
  "httpx>=0.27",
  "structlog>=24.0",
  "beliefcraft-common",
  "python-dotenv>=1.0",
  "anthropic>=0.18.0",
  "boto3>=1.34",
  "tenacity>=8.2",
  "langchain-aws>=0.1",
  "langchain-core>=0.1",
  "langgraph>=0.1",
]

[tool.uv.sources]
beliefcraft-common = { workspace = true }

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "../../packages/common/src",
    "../../packages/database/src",
]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pre-commit>=3.0",
]
