[project]
name = "beliefcraft-environment-api"
version = "0.1.0"
description = "Environment API service for BeliefCraft."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic",
  "pyyaml",
  "python-dotenv",
  "sqlalchemy>=2.0.0",
  "beliefcraft-common",
  "beliefcraft-database",
  "faker"
]

[tool.uv.sources]
beliefcraft-common = { workspace = true }
beliefcraft-database = { workspace = true }

[dependency-groups]
dev = [
  "pytest>=8.0",
]
