[project]
name = "beliefcraft-rag-service"
version = "0.1.0"
description = "RAG service for BeliefCraft."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic",
  "pyyaml",
  "python-dotenv",
  "beliefcraft-common",
  "fastmcp<3",
]

[tool.uv.sources]
beliefcraft-common = { workspace = true }

[dependency-groups]
dev = [
  "pytest>=8.0",
]
