[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beliefcraft-sandbox-runner"
version = "0.1.0"
description = "Isolated Docker execution runner for BeliefCraft."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.0",
  "llm-sandbox[docker]>=0.3.37",
  "python-dotenv>=1.0",
  "beliefcraft-common",
]

[tool.uv.sources]
beliefcraft-common = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pre-commit>=3.0",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "../../packages/common/src",
]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
markers = [
  "integration: integration tests that require external services",
  "slow: slow tests",
  "asyncio: async tests",
]
